Update user endpoints documentation
