# src/api/routes/movie.routes.js
@@ -5,14 +5,14 @@ const routes = express.Router();
 const MovieController = require("../controllers/MovieController");
 const Authentication = require("../middlewares/Authentication");
 
-routes.post("/", celebrate({
+routes.post("/", Authentication, celebrate({
   [Segments.BODY]: Joi.object().keys({
     title: Joi.string().required(),
     year: Joi.number().required(),
     director: Joi.string().required(),
     genres_id: Joi.array().items(Joi.number()),
   }),
-}), Authentication, MovieController.createMovie);
+}), MovieController.createMovie);
 
 routes.get("/list", MovieController.listMoviesWithGenres);
 
